// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildProjectGraph builds full project graph 1`] = `
Object {
  "bar": Array [],
  "baz": Array [],
  "foo": Array [],
  "kibana": Array [
    "foo",
  ],
  "quux": Array [],
  "zorge": Array [],
}
`;

exports[`#topologicallyBatchProjects batches projects topologically based on their project dependencies 1`] = `
Array [
  Array [
    "bar",
    "foo",
    "baz",
    "quux",
    "zorge",
  ],
  Array [
    "kibana",
  ],
]
`;

exports[`#topologicallyBatchProjects batches projects topologically even if graph contains projects not presented in the project map 1`] = `
Array [
  Array [
    "kibana",
    "bar",
    "baz",
    "quux",
    "zorge",
  ],
]
`;
